  speed already. Still need to work out some bugs, though.
  - It affects animations. They currently only work while moving. Solution is to
    set an animated tile as *always* dirty, for its entire width.
  - It affects server connections for some reason... Users are unable to move if
    someone else logs off or logs on.

--- Saturday 2011-11-19 ---
* Cleaned up the code a bit more
* Created an "oldcode" file, where some snippets can go that aren't currently
  in use, but may be used later on.
* Added simple loading screens
* Engine demo: Made the user start in the correct place (so no more starting in
  pure white space)

--- Wednesday 2011-09-21 ---
* Clean up the sercon file, modify functions and add them to the namespace.
* Added a "types" file, which is useful for development.
* Removed dialog code from keyboard file.

--- Tuesday 2011-09-20 ---
* Added a shim javascript file. It takes care of fallback functions (like
  websockets, requestAnimationFrame, ...)

--- Saturday 2011-09-17 ---
* Huge changes to the server, mostly due to the new websocket protocol (another
  one) Lots of new code was worked into the server. Code cleanup is also busy.

--- Friday 2011-09-16 ---
* Committed lots of previous changes
* I have previously decided to split Kiflea and its Hud (called Duk), now I'm
  also deciding to *continue* Kiflea without waiting for Duk to be finished.
  We'll use plain old HTML+CSS for the interface.
  At least this way our viewscreen stays clear.

--- Friday 2011-01-14 ---
I've started the year by deciding to restructure the entire engine.
I've done quite a lot of recoding from scratch and though I'm far from finished,
I thought it would be a good idea to do a commit right now. The code works, a
connection with the server can be made and we now have transparant dialog boxes!

--- Tuesday 2010/12/28 ---
(And the past week in general)
* Started getting serious about the server, rethinking how updates would be sent
  from client and such.